fix: companies block middle spacing

--- a/style.css
+++ b/style.css
@@ -397,15 +397,34 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 40px;
+    padding: 50px;
 }
 
 .companies-logo img {
     filter: invert(1);
 }
 
-.companies-block hr {
+.middle {
+    background-color: #f5f5f5;
+}
+
+.testimonial {
+    padding: 30px;
+}
+
+.testimonial img {
+    max-width: 50%;
+    max-height: 50%;
+}
+
+.testimonial hr {
     width: 20%;
+    border: 0.5px solid grey;
+}
+
+.testimonial p {
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 #designit {
